--- a/Falla2018/Falla2018/Views/LoginPage.xaml
+++ b/Falla2018/Falla2018/Views/LoginPage.xaml
@@ -6,95 +6,120 @@
     BindingContext="{Binding Main, Source={StaticResource Locator}}"
     Title="Login">
     <ContentPage.Content>
-        <ScrollView>
+        <ScrollView
+            BindingContext="{Binding Login}">
             <StackLayout
-            Padding="10,20,10,10">
+                Padding="5">
                 <Label
-                FontAttributes="Bold"
-                FontSize="Medium"
-                HorizontalOptions="Center"
-                Text="Falla 2018">
+                    FontAttributes="Bold"
+                    FontSize="Medium"
+                    HorizontalOptions="Center"
+                    Text="Falla 2018">
                 </Label>
                 <Image
-                HeightRequest="100"
-                Source="falla">
+                    HeightRequest="100"
+                    Source="falla">
                 </Image>
                 <Grid
-                Margin="0,20">
+                    Margin="10,0"
+                    VerticalOptions="CenterAndExpand">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="2.5*"/>
                     </Grid.ColumnDefinitions>
                     <Label
-                    Grid.Column="0"
-                    Grid.Row="0"
-                    FontAttributes="Bold"
-                    Text="E-mail">
+                        Grid.Column="0"
+                        Grid.Row="0"
+                        FontAttributes="Bold"
+                        Text="E-mail"
+                        VerticalOptions="Center">
                     </Label>
                     <Entry
-                    Grid.Column="1"
-                    Grid.Row="0"
-                    Keyboard="Email"
-                    Placeholder="Introduce tu email">
+                        Grid.Column="1"
+                        Grid.Row="0"
+                        Keyboard="Email"
+                        Placeholder="Introduce tu email"
+                        Text="{Binding Email, Mode=TwoWay}">
                     </Entry>
                     <Label
-                    Grid.Column="0"
-                    Grid.Row="1"
-                    FontAttributes="Bold"
-                    Text="Password">
+                        Grid.Column="0"
+                        Grid.Row="1"
+                        FontAttributes="Bold"
+                        Text="Password"
+                        VerticalOptions="Center">
                     </Label>
                     <Entry
-                    Grid.Column="1"
-                    Grid.Row="1"
-                    IsPassword="True"
-                    Placeholder="Introduce tu password">
+                        Grid.Column="1"
+                        Grid.Row="1"
+                        IsPassword="True"
+                        Placeholder="Introduce tu password"
+                        Text="{Binding Password, Mode=TwoWay}">
                     </Entry>
                 </Grid>
-                <StackLayout
-                Orientation="Horizontal">
-                    <Label
-                    HorizontalOptions="StartAndExpand"
-                    Text="Recuerdame en este dispotivo"
-                    VerticalOptions="Center">
-                    </Label>
-                    <Switch
-                    HorizontalOptions="End"
-                    IsToggled="True">
-                    </Switch>
-                </StackLayout>
-                <ActivityIndicator>
+                <ActivityIndicator
+                    IsRunning="{Binding IsRunning, Mode=TwoWay}"
+                    VerticalOptions="CenterAndExpand">
                 </ActivityIndicator>
                 <StackLayout
-                Margin="40,0">
+                    Margin="10,0"
+                    Orientation="Horizontal"
+                    VerticalOptions="CenterAndExpand">
+                    <Label
+                        HorizontalOptions="StartAndExpand"
+                        Text="Recuerdame en este dispotivo"
+                        VerticalOptions="Center">
+                    </Label>
+                    <Switch
+                        HorizontalOptions="End"
+                        IsToggled="{Binding IsRemembered, Mode=TwoWay}">
+                    </Switch>
+                </StackLayout>
+                <Label
+                    HorizontalOptions="Center"
+                    Text="¿Olvidaste tú contraseña?"
+                    TextColor="Blue"
+                    VerticalOptions="Center">
+                </Label>
+                <StackLayout
+                    Margin="40,0"
+                    Orientation="Horizontal"
+                    VerticalOptions="CenterAndExpand">
                     <Button
-                    BackgroundColor="Navy"
-                    BorderRadius="23"
-                    HeightRequest="46"
-                    Text="Login"
-                    TextColor="White">
+                        BackgroundColor="Navy"
+                        BorderRadius="23"
+                        Command="{Binding LoginCommand}"
+                        HeightRequest="46"
+                        HorizontalOptions="FillAndExpand"
+                        IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
+                        Text="Login"
+                        TextColor="White">
                     </Button>
                     <Button
-                    BackgroundColor="Purple"
-                    BorderRadius="23"
-                    HeightRequest="46"
-                    Text="Registrarse"
-                    TextColor="White">
+                        BackgroundColor="Purple"
+                        BorderRadius="23"
+                        Command="{Binding RegisterCommand}"
+                        HeightRequest="46"
+                        HorizontalOptions="FillAndExpand"
+                        IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
+                        Text="Registrarse"
+                        TextColor="White">
                     </Button>
                 </StackLayout>
                 <StackLayout
-                HorizontalOptions="Center"
-                Orientation="Horizontal">
+                    HorizontalOptions="Center"
+                    Orientation="Horizontal"
+                    VerticalOptions="EndAndExpand">
                     <Image
-                    Source="facebook_logo"
-                    WidthRequest="80">
+                        Source="facebook_logo"
+                        WidthRequest="80">
                     </Image>
                     <Image
-                    Source="twitter_logo"
-                    WidthRequest="80">
+                        Source="twitter_logo"
+                        WidthRequest="80">
                     </Image>
                     <Image
-                    Source="instagram_logo"
-                    WidthRequest="80">
+                        Source="instagram_logo"
+                        WidthRequest="80">
                     </Image>
                 </StackLayout>
             </StackLayout>
