--- a/Falla2018/Falla2018/App.xaml
+++ b/Falla2018/Falla2018/App.xaml
@@ -8,6 +8,7 @@
 
 		<!-- Application resource dictionary -->
         <ResourceDictionary>
+            <!-- Instance Locator-->
             <infra:InstanceLocator x:Key="Locator"/>
         </ResourceDictionary>
 
