--- a/Falla2018/Falla2018/Views/ActsPage.xaml
+++ b/Falla2018/Falla2018/Views/ActsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage 
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Falla2018.Views.EventsPage"
+    x:Class="Falla2018.Views.ActsPage"
     BindingContext="{Binding Main, Source={StaticResource Locator}}"
     Title="Eventos">
     <ContentPage.Content>
