Consumir servicio para token en Login

--- a/Falla2018/Falla2018/Views/ActsPage.xaml
+++ b/Falla2018/Falla2018/Views/ActsPage.xaml
@@ -12,6 +12,7 @@
             Padding="5">
             <SearchBar
                 BackgroundColor="Silver"
+                HeightRequest="46"
                 Placeholder="Buscar..."
                 SearchCommand="{Binding SearchCommand}"
                 Text="{Binding Filter, Mode=TwoWay}">
