--- a/Falla2018/Falla2018/Views/ActsPage.xaml
+++ b/Falla2018/Falla2018/Views/ActsPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage 
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:i18n="clr-namespace:Falla2018.Helpers"
     x:Class="Falla2018.Views.ActsPage"
     BackgroundColor="Silver"
     BindingContext="{Binding Main, Source={StaticResource Locator}}"
@@ -13,7 +14,7 @@
             <SearchBar
                 BackgroundColor="Silver"
                 HeightRequest="46"
-                Placeholder="Buscar..."
+                Placeholder="{i18n:Translate Search}"
                 SearchCommand="{Binding SearchCommand}"
                 Text="{Binding Filter, Mode=TwoWay}">
             </SearchBar>
