--- a/Falla2018.Backend/Views/Home/Index.cshtml
+++ b/Falla2018.Backend/Views/Home/Index.cshtml
@@ -3,9 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Falla 2018</h1>
+    <img src="~/Content/Images/falla.png" width="100" />
 </div>
 
 <div class="row">
