--- a/Falla2018/Falla2018/Views/LoginPage.xaml
+++ b/Falla2018/Falla2018/Views/LoginPage.xaml
@@ -5,7 +5,7 @@
     xmlns:i18n="clr-namespace:Falla2018.Helpers"
     x:Class="Falla2018.Views.LoginPage"
     BindingContext="{Binding Main, Source={StaticResource Locator}}"
-    Title="Login">
+    Title="{i18n:Translate Login}">
     <ContentPage.Content>
         <ScrollView
             BindingContext="{Binding Login}">
